Bug 200795 - [patch] Text edit box with transparent background looks bad
Summary: [patch] Text edit box with transparent background looks bad
Status: RESOLVED FIXED
Alias: None
Product: konqueror
Classification: Applications
Component: khtml (other bugs)
Version First Reported In: unspecified
Platform: Debian testing Linux
: NOR normal
Target Milestone: ---
Assignee: Konqueror Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2009-07-19 20:48 UTC by kt
Modified: 2010-01-22 22:12 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
screenshoot on how it looks in konqueror (10.16 KB, image/png)
2009-07-19 20:50 UTC, kt
Details
screenshoot on how it looks on arora (webkit 4.5.2) (10.24 KB, image/png)
2009-07-19 20:51 UTC, kt
Details

Note You need to log in before you can comment on or make changes to this bug.
Description kt 2009-07-19 20:48:42 UTC
Version:            (using KDE 4.2.96)
OS:                Linux
Installed from:    Debian testing/unstable Packages

Connect to http://www.css3.info/preview/word-wrap/ , on top right of the page there is a search box with transparent background lineedit that looks bad because borders are drawed. In this case borders must not be showed like FF3 and Webkit 4.5.2 do.

thanks!
Comment 1 kt 2009-07-19 20:50:38 UTC
Created attachment 35463 [details]
screenshoot on how it looks in konqueror
Comment 2 kt 2009-07-19 20:51:48 UTC
Created attachment 35464 [details]
screenshoot on how it looks on arora (webkit 4.5.2)
Comment 4 kt 2009-08-08 11:16:17 UTC
Another page with the same problem : http://blogs.koolwal.net (top-right search form)
Comment 5 kt 2009-08-09 21:08:58 UTC
The "go" search button on http://www.andrel.com/ must not have borders
Comment 6 Germain Garand 2009-11-08 20:28:07 UTC
SVN commit 1046447 by ggarand:

patch by Andrea IACOVITTI <aiacovitti@libero.it> and Allan Sandfeld Jensen
for honouring "border: none" on native widget borders.

BUG: 200795

 M  +1 -1      render_replaced.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1046447
Comment 7 Germain Garand 2010-01-22 22:12:35 UTC
SVN commit 1078782 by ggarand:

Patch by Andrea Iacovitti <aiacovitti@libero.it> :
.factor logic to determine if native widget borders should be turned off
.rename method determining if painting CSS borders is necessary
.use the former more systematically where needed
.partial fix for #216795

CCBUG:216795
CCBUG:200795

 M  +6 -6      render_form.cpp  
 M  +6 -5      render_replaced.cpp  
 M  +6 -1      render_replaced.h  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1078782