patch by Andrea IACOVITTI <aiacovitti@libero.it> and Allan Sandfeld Jensen for honouring "border: none" on native widget borders.

BUG: 200795

svn path=/trunk/KDE/kdelibs/; revision=1046447